fix module export within store